fix: ui: Add visible content con component

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,2 +1,9 @@
-*
-  background-color: green
+#reel
+  &:after, &:before
+    display: 'inline-block'
+    width: 1em
+    height: 1em
+  &:after
+    content: '>'
+  &:before
+    content: '<'
